It's ready to go live!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<img src="/files/Jester_Hello.png" height=1000 id="jesterhello"></img>
 	<div id="maintext">
+		<br> <br> <br> <br>
 		<h1>Hello!</h1>
 		<br>
 		<p>
@@ -28,6 +29,10 @@
 			<a href="https://scratch.mit.edu/users/-Krios-/">Scratch</a>
 			<a href="https://replit.com/@-Krios-">Replit</a>
 			<a href="https://github.com/da-Jester">Github</a>
+		</div>
+		<div id="ps">
+			<br> <br>
+			<p>P.S. If you're bored, why don't you listen to my new song <a href="https://soundcloud.com/krios-da-jester/imp?si=1360fb61ea3e493db68ce5d1070d4257&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Imp</a> or play this <a href="https://scratch.mit.edu/projects/567697764/fullscreen/">Completly normal Platformer</a> that I made on <a href="https://scratch.mit.edu">Scratch</a></p>
 		</div>
 	</div>
 </body>
