Fixed image on github pages?

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<img src="/files/jester-hello.png" height=1000 id="jesterhello"></img>
+	<img src="./files/jester-hello.png" height=1000 id="jesterhello"></img>
 	<div id="maintext">
 		<br> <br> <br> <br>
 		<h1>Hello!</h1>
